--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'config';
 @import 'utilities';
 @import 'form';
+@import 'mobile';
 
 * {
   box-sizing: border-box;
@@ -168,5 +169,25 @@ img {
         flex-basis: 20%;
       }
     }
+  }
+}
+
+// Posts Page
+.post-form-header {
+  padding: 0.5rem;
+}
+
+.post {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-gap: 2rem;
+  align-items: center;
+
+  & > div:first-child {
+    text-align: center;
+  }
+
+  img {
+    width: 150px;
   }
 }
